sample-spring/spot-dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sample-spring
    app.kubernetes.io/name: sample-spring
  name: sample-spring
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: sample-spring
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sample-spring
        app.kubernetes.io/name: sample-spring
        version: v0.3.23
    spec:
      containers:
        - image: nalbam/sample-spring:v0.3.23
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: sample-spring
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8081
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 600m
              memory: 1228Mi
            requests:
              cpu: 500m
              memory: 1024Mi
